--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Rubik's cube tutorial - Tvrtko </title>
+  <title>Rubik's cube tutorial - Tvrtko </title> 
   <link rel="shortcut icon" href="img/iconlogo.png">
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
@@ -231,7 +231,9 @@
       <p>Hold the cube in your hand with an unsolved corner on the front-right-top corner, then do the algorithm below twice or four times until that specific piece is oriented well: </p>
       <p style="font-size: 25px;text-align: center;""><br><strong>R' D' R D</strong></p>
       <p>It seems like you messed up the whole cube but don't worry, it will be all right when all the corner pieces are oriented. Turn the top layer only to move another unsolved yellow piece to the front-right-top corner of the cube and do the same R' D' R D again until this specific piece is ok. Be careful not to move the two bottom layers between the algorithms and <strong>never rotate the whole cube!</strong><br>
-      You are so close to the end so be careful because this is the step in this tutorial where most people get lost.</p>
+      You are so close to the end so be careful because this is the step in this tutorial where most people get lost.</p><br>
+      <hr>
+      <p style="text-align: center;">by: Tvrtko Babic :)</p>
     </div>
 
 
