--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <div class="container">
     <h1 style="font-family: 'Caveat Brush';">Rubik's Cube Notation</h1>
     <img src="img/line1.png" style="width: 100%;height: 3px;">
-    <p>We use letters to describe a rotation on the cube. Learn to read the Rubik's Cube Notation and you'll be able to perform all algorithms you see in the solution tutorials. The good news is that learning only six intuitive letters is sufficient to solve the cube but if you are a speedcuber you should learn the advanced notation which you can access from this page.<br>e.g. F denotes the bottom layer in clockwise direction and Fi (or F ' ) denotes the bottom layer in counter clockwise direction.
+    <p>We use letters to describe a rotation on the cube. Learn to read the Rubik's Cube Notation and you'll be able to perform all algorithms you see in the solution tutorials. The good news is that learning only six intuitive letters is sufficient to solve the cube but if you are a speedcuber you should learn the advanced notation which you can access from this page.<br>e.g. F denotes the front layer in clockwise direction and Fi (or F ' ) denotes the front layer in counter clockwise direction.
     </p>
 
     <div class="owl-carousel owl-theme">
