--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <p>It seems like you messed up the whole cube but don't worry, it will be all right when all the corner pieces are oriented. Turn the top layer only to move another unsolved yellow piece to the front-right-top corner of the cube and do the same R' D' R D again until this specific piece is ok. Be careful not to move the two bottom layers between the algorithms and <strong>never rotate the whole cube!</strong><br>
       You are so close to the end so be careful because this is the step in this tutorial where most people get lost.</p><br>
       <hr>
-      <p style="text-align: center;">by: Tvrtko Babic :)</p>
+      <p style="text-align: center;"> --- Tvrtko Babic --- </p>
     </div>
 
 
